--- a/index.html
+++ b/index.html
@@ -1,51 +1,96 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
-    <meta charset="utf-8" />
-    <title>Self Care | Login Page</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-
-
-    <link rel="stylesheet" href="assets/plugins/jquery-mobile/jquery.mobile-1.0a2.min.css" />
-    <script src="assets/plugins/jquery-1.4.4.min.js"></script>
-    <script src="assets/plugins/jquery-mobile/jquery.mobile-1.0a2.min.js"></script>
-
-
+	<meta charset="utf-8" />
+	<title>S&D | Login Page</title>
+	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+	<meta content="" name="description" />
+	<meta content="" name="author" />
+	<!-- BEGIN GLOBAL MANDATORY STYLES -->
+	<link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/plugins/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/style-metro.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
+	<link href="assets/plugins/uniform/css/uniform.default.min.css" rel="stylesheet" type="text/css"/>
+	<!-- END GLOBAL MANDATORY STYLES -->
+	<!-- BEGIN PAGE LEVEL STYLES -->
+	<link href="assets/css/pages/login.css" rel="stylesheet" type="text/css"/>
+	<!-- END PAGE LEVEL STYLES -->
+	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
-<body style="background:  #000000!important;">
+<body class="login">
+	<!-- BEGIN LOGO -->
+	<div class="logo">
+	</div>
+	<!-- END LOGO -->
+	<!-- BEGIN LOGIN #ffb848-->
+	<div class="content">
+		<!-- BEGIN LOGIN FORM -->
 
+        <div style="text-align: center">
+            <img src="assets/img/selfcare.png">
+        </div>
 
-<div data-role="page" id="home">
-    <div data-position="fixed" data-role="header" data-theme="b">
+		<form class="form-vertical login-form" >
 
-        <h1>Self Care</h1>
-    </div>
-    <div align="center" data-role="content" id="contentConfirmation" name="contentConfirmation" style="background:  #ffffff!important;">
-        <h1>Sign In</h1>
-        <h2></h2>
-        <form id="HLogin" method="POST"><div data-role="fieldcontain">
+			<h3 class="form-title" style="text-align: center;color: #808080 ; font-size: 30px;">Self Care</h3>
+			<div class="control-group">
+				<!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+				<label class="control-label visible-ie8 visible-ie9">Username</label>
+				<div class="controls">
+					<div class="input-icon left">
+						<i class="icon-user"></i>
+						<input class="m-wrap placeholder-no-fix" type="text" placeholder="Username" name="username" id="username" value="user-1098" />
+					</div>
+				</div>
+			</div>
+			<div class="control-group">
+				<label class="control-label visible-ie8 visible-ie9">Password</label>
+				<div class="controls">
+					<div class="input-icon left">
+						<i class="icon-lock"></i>
+						<input class="m-wrap placeholder-no-fix" type="password" placeholder="Password" name="password" value="jerry"/>
+					</div>
+				</div>
+			</div>
+			<div class="form-actions" style="text-align:center">
+				 <button type="submit" class="btn red">
+				Sign In <i class="m-icon-swapright m-icon-white"></i>
+				</button>
 
-            <input class="required" id="Lusername" name="uid_r" type="text" value="" placeholder="Username">
-    </div>
-            <div data-role="fieldcontain">
-                <input id="Lpassword" name="pwd_r" type="password" value="" placeholder="Password">
-            </div>
-            <div class="ui-grid-a">
-                <div class="ui-body">
-                    <div class="ui-block-b" style="text-align: center!important;vertical-align: middle;float: right">
-                        <button data-theme="b" type="submit" >Login</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
+			</div>
 
+		</form>
+		<!-- END LOGIN FORM -->
 
+	</div>
+	<!-- END LOGIN -->
+	<!-- BEGIN COPYRIGHT -->
+	<div class="copyright">
+
+	</div>
+	<!-- END COPYRIGHT -->
+	<!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+	<!-- BEGIN CORE PLUGINS -->
+	<script src="assets/plugins/jquery-1.10.1.min.js" type="text/javascript"></script>
+	<script src="assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      
+	<script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+	<!-- END JAVASCRIPTS -->
+    <script src="assets/scripts/login.js" type="text/javascript"></script>
+    <script src="assets/plugins/jquery-validation/dist/jquery.validate.min.js" type="text/javascript"></script>
+    <script>
+        jQuery(document).ready(function() {
+//            App.init();
+            Login.init();
+        });
+
+    </script>
 </body>
 <!-- END BODY -->
 </html>
